# sphere_placer

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
apps/: CMakeLists.txt  Placer.cpp  Placer.h  PlacerConfig.cpp  PlacerConfig.h  RangeTracker.cpp  RangeTracker.h  Raster.cpp  Raster.h  main.cpp  vector_manipulation.cpp  vector_manipulation.h
example/: config.json  radii.csv
src/: CMakeLists.txt  Placer.cpp  Placer.h  PlacerConfig.cpp  PlacerConfig.h  RangeTracker.cpp  RangeTracker.h  Raster.cpp  Raster.h  file_interface.h  main.cpp  main.h  vector_manipulation.cpp  vector_manipulation.h
src/RNG/: RNG.cpp  RNG.h  Splitmix64.cpp  Splitmix64.h  xoshiro256pp.cpp  xoshiro256pp.h  xoshiro256ss.cpp  xoshiro256ss.h
src/dim_N_vectors/: dim_2_vectors.h  dim_3_vectors.h
src/file_interface/: file_interface.cpp  file_interface.h
